--- a/_layouts/people.html
+++ b/_layouts/people.html
@@ -15,7 +15,7 @@ layout: body
   </header><!-- .page-header -->
 
   <div class="post-feed grid{% if page.col_number == 'two' %} grid-col-2{% endif %}{% if page.col_number == 'three' %} grid-col-3{% endif %}">
-    {% assign display_posts = "/blog" | get_pages | sort: 'date' | reverse %}
+    {% assign display_posts = "/people" | get_pages | sort: 'order' %}
 	
     {% for post in display_posts %}
     <article class="post grid-item">
@@ -28,10 +28,7 @@ layout: body
         {% endif %}
         <header class="post-header">
           <h2 class="post-title"><a href="{{ post.url | relative_url }}" rel="bookmark">{{ post.title }}</a></h2>
-          <div class="post-meta">
-            <time class="published"
-              datetime="{{ post.date | date: '%Y-%m-%d %H:%M' }}">{{ post.date | date: '%B %d, %Y' }}</time>
-          </div>
+          <div class="post-meta"></div>
         </header>
         {% assign excerpt_is_not_empty = post.excerpt | is_not_empty %}
         {% if excerpt_is_not_empty %}
