--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -15,7 +15,7 @@ layout: body
   </header><!-- .page-header -->
 
   <div class="post-feed grid{% if page.col_number == 'two' %} grid-col-2{% endif %}{% if page.col_number == 'three' %} grid-col-3{% endif %}">
-    {% assign display_posts = "/blog" | get_pages | sort: 'date' | reverse %}
+    {% assign display_posts = "/projects" | get_pages | sort: 'order' %}
 	
     {% for post in display_posts %}
     <article class="post grid-item">
@@ -29,9 +29,10 @@ layout: body
         <header class="post-header">
           <h2 class="post-title"><a href="{{ post.url | relative_url }}" rel="bookmark">{{ post.title }}</a></h2>
           <div class="post-meta">
-            <time class="published"
+            <!--<time class="published"
               datetime="{{ post.date | date: '%Y-%m-%d %H:%M' }}">{{ post.date | date: '%B %d, %Y' }}</time>
           </div>
+				-->
         </header>
         {% assign excerpt_is_not_empty = post.excerpt | is_not_empty %}
         {% if excerpt_is_not_empty %}
